--- a/modules/HomeTraining/main.css
+++ b/modules/HomeTraining/main.css
@@ -5,8 +5,20 @@
   margin-bottom: 60px;
 }
 
-.TPose_img {
-  font-size: 42px;
-  font-weight: 600;
-  margin-bottom: 32px;
+.TPose_Size {
+  margin: 0px 40px; 
+  width: 600px;
+  height: 375px;
+}
+.description-container {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 52px;
+  font-size: 24px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  padding: 0 10px;
+  background: #fff;
+  
 }
